# WebPlay

./: .dockerignore  .gitattributes  .gitignore  .version  AGENTS.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  app.py  build.ps1  build.sh  cli.py  config.py  docker-compose.yml  installer.ps1  installer.sh  pyproject.toml  requirements.txt
core/: auth.py  db.py  media.py  paths.py  themes.py  utils.py
docs/: cli.md  configuration.md  deployment.md  development.md  docker.md  index.md  setup.md  troubleshooting.md  usage.md
static/: themes.css
templates/: base.html  error.html  index.html  player.html  remote.html
tests/: test_app.py
